# ai-dial-assistant

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .ort.yml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  build.sh  debug_server.py  logging.conf  main.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  server.py  server_callback.py  token_limits.md
.github/: CODEOWNERS  dependabot.yml  pr-title-checker-config.json
.github/workflows/: deploy_dev.yml  pr.yml  pr_check_tests.yml  release.yml
aidial_assistant/: app.py
application/: assistant_application.py
chains/: base_chain.py  command_chain.py  command_parser.py  command_reader.py  json_object.py  model_client.py  request_parser.py  request_reader.py
cli/: main_args.py
client/: check_api.py  check_dialog.py  check_json_parsing.py  check_langchain_api.py  check_openai_api.py  check_streaming.py  utils.py
conf/: project_conf.py
configs/: chat.yaml  deltix_azure.yaml  open_ai.yaml  proxy_azure.yaml
dial_sdk/: aidial_sdk-0.0.0-py3-none-any.whl
examples/: openai_api_example.py
helm/: development.yaml  review.yaml
llm/: base.py  callback.py
open_api/: operation_selector.py  requester.py  response_summarisarion.py
plugins/: big_number_multiplication.py  http_request.py  index.yaml  mult_nums.py  run_python.py  weather_forecast.py  wolfram_alpha.py
prompts/: __init__.py  dialog.py  open_api.py
protocol/: command_result.py  execution_context.py  project_context.py
scripts/: clean.py  test_wolfram.py
test_questions/: epam.txt
tools/: check_api.py  check_langchain_api.py  check_streaming.py  get_weather_report.py
utils/: __init__.py  addon_token_source.py  env.py  http.py  init.py  list.py  open_ai.py  open_ai_plugin.py  optional.py  printing.py  process.py  state.py  text.py  token_counter.py  yaml_loader.py
(+111 files in other folders)
