[tool.poetry]
name = "aidial-assistant"
version = "0.5.0rc"
description = "DIAL Assistant Service"
authors = ["EPAM RAIL <SpecialEPM-DIALDevTeam@epam.com>"]
homepage = "https://epam-rail.com"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ai"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/epam/ai-dial-assistant.git"

[tool.poetry.scripts]
clean = "scripts.clean:main"

[tool.poetry.dependencies]
python = "^3.11"
aiocache = "^0.12.2"
jinja2 = "^3.1.2"
langchain = "^0.0.350"
openai = "^1.3.9"
pydantic = "1.10.13"
pyyaml = "^6.0.1"
typing-extensions = "^4.8.0"
aidial-sdk = { version = "^0.6.1", extras = ["telemetry"] }
aiohttp = "^3.9.0"
openapi-schema-pydantic = "^1.2.4"
openapi-pydantic = "^0.3.2"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pyright = "^1.1.324"
autoflake = "^2.2.0"

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    ".nox",
    "**/.pytest_cache",
    "**/__pycache__",
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
  | \.nox
  | \.pytest_cache
  | __pycache__
)/
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true
exclude = [
    '\.git',
    '\.venv',
    '\.nox',
    '\.pytest_cache',
    '__pycache__',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
